# gtest_template

./: README.md  build.sh  cleanup.sh  test.sh
gtest/: CMakeLists.txt
src/: CMakeLists.txt
